--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.4.2",
+    "@next/bundle-analyzer": "^13.4.19",
     "@storybook/addon-actions": "^7.0.18",
     "@storybook/addon-essentials": "^7.0.18",
     "@storybook/addon-interactions": "^7.0.18",
@@ -68,7 +69,9 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.26",
     "babel-loader": "^9.1.2",
+    "babel-plugin-import": "^1.13.8",
     "commitizen": "^4.3.0",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "^13.1.3",
