--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": ">=14.0.0 <17.0.0",
+    "node": ">=20.0",
     "yarn": ">=1.22.0",
     "npm": "please-use-yarn"
   },
@@ -41,9 +41,9 @@
     "firebase": "^9.15.0",
     "html-to-image": "^1.11.11",
     "isomorphic-dompurify": "^1.8.0",
-    "next": "13.4.12",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.45.2",
     "react-markdown": "^8.0.5",
     "rehype-raw": "^6.1.1",
@@ -74,7 +74,7 @@
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.50.0",
-    "eslint-config-next": "^13.1.3",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-storybook": "^0.6.11",
     "husky": "^8.0.3",
