--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.45.2",
+    "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "string-width": "^6.1.0",
     "swr": "^2.2.4",
     "tsconfig-paths-webpack-plugin": "^4.0.0"
