--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,34 +11,25 @@
   "customizations": {
     "vscode": {
       "settings": {},
-      "workspaceFolder":"${containerWorkspaceFolder}",
+      "workspaceFolder": "${containerWorkspaceFolder}",
       // Add the IDs of extensions you want installed when the container is created.
       "extensions": [
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
         "ms-azuretools.vscode-docker",
         "mhutchie.git-graph"
-      ],
+      ]
     }
   },
   "containerEnv": {
-    "CHOKIDAR_USEPOLLING":"true",
-    "WATCHPACK_POLLING":"true"
+    "CHOKIDAR_USEPOLLING": "true",
+    "WATCHPACK_POLLING": "true"
   },
   "forwardPorts": [
     // Application and Storybook
-    3000,
-    6006,
+    3000, 6006,
     // Local Firebase Emulator Suite
-    4000,
-    4400,
-    4500,
-    5000,
-    5001,
-    8080,
-    9099,
-    9150,
-    9199
+    4000, 4400, 4500, 5000, 5001, 8080, 9099, 9150, 9199
   ],
   "portsAttributes": {
     // Application and Storybook
@@ -84,7 +75,7 @@
     }
   },
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "./.devcontainer/scripts/start.sh",
+  "postCreateCommand": "./.devcontainer/scripts/start.sh"
   // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   // "remoteUser": "node"
 }
