--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.14.5",
     "@mui/x-data-grid": "^6.6.0",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.2",
     "firebase": "^9.15.0",
     "html-to-image": "^1.11.11",
     "isomorphic-dompurify": "^1.8.0",
     "next": "^14.2.3",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.45.2",
