--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,6 +4,8 @@
 ARG VARIANT="20-bullseye"
 FROM mcr.microsoft.com/vscode/devcontainers/typescript-node:0-${VARIANT}
 
-RUN apt-get update && apt-get install -y openjdk-11-jdk \
+RUN apt-get update && apt-get install -y \
+  # Note: `openjdk-11-jdk` required for Firebase Emulators suite
+  openjdk-11-jdk \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
