--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,40 +5,36 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
+  "runArgs": ["--name", "omshub-website-dev"],
   "mounts": [
-    "source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"
+    // cache `node_modules`
+    "source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume",
+    // cache firebase emulators suite JAR files -- ref: https://firebase.google.com/docs/emulator-suite/install_and_configure#integrate_with_your_ci_system
+    "source=${localWorkspaceFolderBasename}-fb_emulators_root,target=/root/.cache/firebase/emulators/,type=volume", // root user
+    "source=${localWorkspaceFolderBasename}-fb_emulators_nonroot,target=/home/${containerUser}/.cache/firebase/emulators/,type=volume" // non-root user (e.g., `node`)
   ],
   "customizations": {
     "vscode": {
       "settings": {},
-      "workspaceFolder":"${containerWorkspaceFolder}",
+      "workspaceFolder": "${containerWorkspaceFolder}",
       // Add the IDs of extensions you want installed when the container is created.
       "extensions": [
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
-        "ms-azuretools.vscode-docker",
+        "oderwat.indent-rainbow",
         "mhutchie.git-graph"
-      ],
+      ]
     }
   },
   "containerEnv": {
-    "CHOKIDAR_USEPOLLING":"true",
-    "WATCHPACK_POLLING":"true"
+    "CHOKIDAR_USEPOLLING": "true",
+    "WATCHPACK_POLLING": "true"
   },
   "forwardPorts": [
     // Application and Storybook
-    3000,
-    6006,
+    3000, 6006,
     // Local Firebase Emulator Suite
-    4000,
-    4400,
-    4500,
-    5000,
-    5001,
-    8080,
-    9099,
-    9150,
-    9199
+    4000, 4400, 4500, 5000, 5001, 8080, 9099, 9150, 9199
   ],
   "portsAttributes": {
     // Application and Storybook
