--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "please-use-yarn"
   },
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "build-sitemap": "next-sitemap",
     "start": "next start",
@@ -38,17 +38,22 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.14.5",
     "@mui/x-data-grid": "^6.6.0",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.2",
+    "@types/prismjs": "^1.26.4",
     "firebase": "^9.15.0",
     "html-to-image": "^1.11.11",
     "isomorphic-dompurify": "^1.8.0",
     "next": "^14.2.3",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.45.2",
-    "react-markdown": "^8.0.5",
-    "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1",
+    "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "string-width": "^6.1.0",
     "swr": "^2.2.4",
     "tsconfig-paths-webpack-plugin": "^4.0.0"
