--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -21,7 +21,21 @@ jobs:
     - uses: actions/stale@v9
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'Stale issue message'
-        stale-pr-message: 'Stale pull request message'
         stale-issue-label: 'no-issue-activity'
         stale-pr-label: 'no-pr-activity'
+        exempt-issue-labels: Not Stale
+        exempt-pr-labels: Not Stale
+        stale-issue-message: >
+          This issue is stale because it has been open for 60 days with no
+          activity. Remove the "Stale" label or comment on the issue, or it
+          will be closed in 7 days.
+        stale-pr-message: >
+          This pull request is stale because it has been open for 60 days
+          with no activity. Remove the "Stale" label or comment on the pull
+          request, or it will be closed in 7 days.
+        close-issue-message: >
+          This issue has been marked as stale and closed due to no activity
+          on it.
+        close-pr-message: >
+          This pull request has been marked as stale and closed due to no
+          activity on it.
