--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -27,15 +27,8 @@ jobs:
         exempt-pr-labels: Not Stale
         stale-issue-message: >
           This issue is stale because it has been open for 60 days with no
-          activity. Remove the "Stale" label or comment on the issue, or it
-          will be closed in 7 days.
+          activity.
         stale-pr-message: >
           This pull request is stale because it has been open for 60 days
-          with no activity. Remove the "Stale" label or comment on the pull
-          request, or it will be closed in 7 days.
-        close-issue-message: >
-          This issue has been marked as stale and closed due to no activity
-          on it.
-        close-pr-message: >
-          This pull request has been marked as stale and closed due to no
-          activity on it.
+          with no activity.
+        days-before-close: -1 
