--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -21,7 +21,14 @@ jobs:
     - uses: actions/stale@v9
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'Stale issue message'
-        stale-pr-message: 'Stale pull request message'
         stale-issue-label: 'no-issue-activity'
         stale-pr-label: 'no-pr-activity'
+        exempt-issue-labels: Not Stale
+        exempt-pr-labels: Not Stale
+        stale-issue-message: >
+          This issue is stale because it has been open for 60 days with no
+          activity.
+        stale-pr-message: >
+          This pull request is stale because it has been open for 60 days
+          with no activity.
+        days-before-close: -1 
