--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "fb:seed-db-cloud": "node ./__seed__/script.js SEED_FIREBASE_FIRESTORE_IN_CLOUD",
     "fb:login": "firebase login",
     "fb:emu": "firebase emulators:start --import=./__seed__/firebase-seed --project website",
-    "fb:exp-seed": "firebase emulators:export ./__seed__/firebase-seed"
+    "fb:exp-seed": "firebase emulators:export ./__seed__/firebase-seed --project website"
   },
   "dependencies": {
     "@babel/core": "^7.21.0",
