--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.2",
     "@types/prismjs": "^1.26.5",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "add": "^2.0.6",
     "firebase": "^10.13.0",
     "html-to-image": "^1.11.11",
     "isomorphic-dompurify": "^2.15.0",
@@ -57,7 +60,8 @@
     "remark-math": "^6.0.0",
     "string-width": "^7.2.0",
     "swr": "^2.2.4",
-    "tsconfig-paths-webpack-plugin": "^4.0.0"
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^2",
