--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.2",
     "@types/prismjs": "^1.26.5",
-    "dompurify": "^3.2.5",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "add": "^2.0.6",
     "firebase": "^11.6.0",
     "html-to-image": "^1.11.11",
     "isomorphic-dompurify": "^2.23.0",
@@ -59,6 +61,7 @@
     "string-width": "^7.2.0",
     "swr": "^2.2.4",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "yarn": "^1.22.22",
     "undici": "6.21.1"
   },
   "devDependencies": {
